--- a/index.html
+++ b/index.html
@@ -3,229 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harshit Sharma | Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <title>Harshit Sharma | Digital Portfolio</title>
     <style>
-        body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; background-color: #020617; }
-        
-        /* Interactive Starfield Canvas */
-        #bgCanvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: radial-gradient(circle at center, #0f172a 0%, #020617 100%);
+        :root {
+            --primary: #00d2ff;
+            --secondary: #3a7bd5;
+            --glass: rgba(255, 255, 255, 0.07);
+            --border: rgba(255, 255, 255, 0.15);
         }
 
-        .btn-resume { 
-            border: 1px solid #22d3ee; 
-            color: #22d3ee; 
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); 
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+
+        body {
+            font-family: 'Segoe UI', Roboto, sans-serif;
+            color: #fff;
+            line-height: 1.6;
+            overflow-x: hidden;
+            /* AI Animated Mesh Background */
+            background: linear-gradient(-45deg, #0f0c29, #302b63, #24243e, #000000);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
         }
-        .btn-resume:hover { 
-            background: rgba(34, 211, 238, 0.1); 
-            box-shadow: 0 0 25px rgba(34, 211, 238, 0.3);
-            transform: translateY(-1px);
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
-        .section-card {
-            background: rgba(15, 23, 42, 0.6);
+
+        .container { max-width: 900px; margin: 40px auto; padding: 20px; }
+
+        /* Glass Cards */
+        .glass-card {
+            background: var(--glass);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(51, 65, 85, 0.5);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            padding: 30px;
+            margin-bottom: 30px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
         }
+
+        header { text-align: center; }
+        header h1 { font-size: 2.5rem; margin-bottom: 10px; color: var(--primary); }
+        .contact-info a { color: #ccc; text-decoration: none; margin: 0 10px; font-size: 0.9rem; transition: 0.3s; }
+        .contact-info a:hover { color: var(--primary); }
+
+        h2 { border-left: 4px solid var(--primary); padding-left: 15px; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px; }
+
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .skill-tag { background: rgba(0, 210, 255, 0.1); border: 1px solid var(--primary); padding: 5px 12px; border-radius: 50px; display: inline-block; margin: 5px; font-size: 0.85rem; }
+
+        .edu-item, .project-item { margin-bottom: 20px; border-bottom: 1px solid var(--border); padding-bottom: 15px; }
+        .edu-item:last-child { border: none; }
+        .date { font-size: 0.85rem; color: var(--primary); font-weight: bold; }
+        .score { font-weight: bold; color: #00ffcc; margin-top: 5px; }
+
+        @media (max-width: 600px) { .container { padding: 10px; } }
     </style>
 </head>
-<body class="text-slate-200 overflow-x-hidden">
+<body>
 
-    <canvas id="bgCanvas"></canvas>
-
-    <nav class="fixed w-full z-50 bg-[#020617]/60 backdrop-blur-xl border-b border-slate-800">
-        <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-            <span class="text-cyan-400 font-bold text-xl tracking-tighter italic">HS.</span>
-            <div class="hidden md:flex items-center space-x-8 text-sm font-medium uppercase tracking-widest">
-                <a href="#about" class="hover:text-cyan-400 transition">About</a>
-                <a href="#skills" class="hover:text-cyan-400 transition">Skills</a>
-                <a href="#projects" class="hover:text-cyan-400 transition">Projects</a>
-                <a href="12307053_CV.docx" target="_blank" class="btn-resume px-4 py-2 rounded text-xs font-bold">Resume</a>
-            </div>
-        </div>
-    </nav>
-
-    <header class="min-h-screen flex items-center justify-center pt-20 px-6">
-        <div class="max-w-4xl text-center">
-            <h2 class="text-cyan-400 font-mono mb-4 tracking-widest animate-pulse text-sm">SYSTEM_READY // 2026</h2>
-            <h1 class="text-6xl md:text-8xl font-bold text-white mb-6 tracking-tight">Harshit Sharma</h1>
-            <p class="text-xl md:text-2xl text-slate-400 mb-10 max-w-2xl mx-auto font-light">
-                Aspiring <span class="text-cyan-400 font-medium">Software Developer</span> [cite: 1] & Computer Science Student at LPU[cite: 26].
-            </p>
-            
-            <div class="flex flex-col sm:flex-row items-center justify-center gap-6 mb-12">
-                <a href="12307053_CV.docx" download class="btn-resume px-10 py-4 rounded-full font-bold text-lg flex items-center group">
-                    <i data-lucide="download" class="mr-2 w-5 h-5 group-hover:animate-bounce"></i> Download CV
-                </a>
-                <div class="flex space-x-4">
-                    <a href="https://github.com/Harshit12425" target="_blank" class="p-4 rounded-full border border-slate-700 hover:border-cyan-400 transition hover:text-cyan-400">
-                        <i data-lucide="github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/harshit-sharma-8559bb29a" target="_blank" class="p-4 rounded-full border border-slate-700 hover:border-cyan-400 transition hover:text-cyan-400">
-                        <i data-lucide="linkedin"></i>
-                    </a>
-                </div>
-            </div>
+<div class="container">
+    <header class="glass-card">
+        <h1>Harshit Sharma</h1>
+        <div class="contact-info">
+            <a href="mailto:harshitsharma13890@gmail.com">Email</a> | 
+            <a href="https://www.linkedin.com/in/harshit-sharma-8559bb29a">LinkedIn</a> | 
+            <a href="https://github.com/Harshit12425">GitHub</a>
+            <p style="margin-top:10px;">Mobile: +91-7807588628</p>
         </div>
     </header>
 
-    <section id="about" class="py-24 px-6 max-w-6xl mx-auto">
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-            <div class="section-card p-10 rounded-3xl">
-                <h2 class="text-3xl font-bold mb-6 flex items-center text-white">
-                    <span class="text-cyan-400 mr-4">01.</span> About Me
-                </h2>
-                <div class="space-y-4 text-slate-400 leading-relaxed italic">
-                    <p>I specialize in building optimized and scalable code with a deep focus on time and space complexity analysis.</p>
-                    <p>My core expertise lies in implementing complex Data Structures including Trees, Graphs, and Dynamic Programming.</p>
-                </div>
-                <div class="mt-8 flex gap-4 flex-wrap">
-                    <div class="flex items-center text-xs text-cyan-400 bg-cyan-400/10 px-3 py-1 rounded-full">
-                        <i data-lucide="phone" class="w-3 h-3 mr-2"></i> +91-7807588628 
-                    </div>
-                    <div class="flex items-center text-xs text-cyan-400 bg-cyan-400/10 px-3 py-1 rounded-full">
-                        <i data-lucide="mail" class="w-3 h-3 mr-2"></i> harshitsharma13890@gmail.com [cite: 2]
-                    </div>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4">
-                <div class="section-card p-6 rounded-2xl text-center">
-                    <h4 class="text-cyan-400 text-2xl font-bold">6.08</h4>
-                    <p class="text-slate-500 text-xs uppercase tracking-widest mt-1">Current CGPA [cite: 26]</p>
-                </div>
-                <div class="section-card p-6 rounded-2xl text-center">
-                    <h4 class="text-cyan-400 text-2xl font-bold">LPU</h4>
-                    <p class="text-slate-500 text-xs uppercase tracking-widest mt-1">B.Tech CSE [cite: 26]</p>
-                </div>
-            </div>
+    <section class="glass-card">
+        <h2>Technical Skills</h2>
+        <div>
+            <strong>Languages:</strong> 
+            <span class="skill-tag">C++</span> <span class="skill-tag">JavaScript</span> <span class="skill-tag">C</span> <span class="skill-tag">Python</span> <span class="skill-tag">DSA</span><br>
+            <strong>Cloud & DevOps:</strong> 
+            <span class="skill-tag">AWS (EC2, S3, RDS, VPC)</span> <span class="skill-tag">Docker</span> <span class="skill-tag">Git</span> <span class="skill-tag">Linux</span>
         </div>
     </section>
 
-    <section id="skills" class="py-24 px-6 max-w-6xl mx-auto">
-        <h2 class="text-3xl font-bold mb-12 flex items-center text-white"><span class="text-cyan-400 mr-4">02.</span> Tech Stack</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="section-card p-6 rounded-2xl">
-                <h3 class="text-cyan-400 font-bold mb-4 flex items-center text-sm"><i data-lucide="code" class="mr-2 w-4 h-4"></i> LANGUAGES</h3>
-                <div class="flex flex-wrap gap-2 text-xs">
-                    <span class="px-2 py-1 bg-slate-800 rounded">C++ [cite: 5]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">JavaScript [cite: 5]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Python [cite: 5]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">DSA [cite: 5]</span>
-                </div>
-            </div>
-            <div class="section-card p-6 rounded-2xl">
-                <h3 class="text-cyan-400 font-bold mb-4 flex items-center text-sm"><i data-lucide="cloud" class="mr-2 w-4 h-4"></i> CLOUD/DEVOPS</h3>
-                <div class="flex flex-wrap gap-2 text-xs">
-                    <span class="px-2 py-1 bg-slate-800 rounded">AWS (EC2, S3, RDS) [cite: 8]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Docker [cite: 8]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Git [cite: 8]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Linux [cite: 8]</span>
-                </div>
-            </div>
-            <div class="section-card p-6 rounded-2xl">
-                <h3 class="text-cyan-400 font-bold mb-4 flex items-center text-sm"><i data-lucide="layers" class="mr-2 w-4 h-4"></i> FRAMEWORKS</h3>
-                <div class="flex flex-wrap gap-2 text-xs">
-                    <span class="px-2 py-1 bg-slate-800 rounded">HTML/CSS [cite: 6]</span>
-                </div>
-            </div>
-            <div class="section-card p-6 rounded-2xl">
-                <h3 class="text-cyan-400 font-bold mb-4 flex items-center text-sm"><i data-lucide="user" class="mr-2 w-4 h-4"></i> SOFT SKILLS</h3>
-                <div class="flex flex-wrap gap-2 text-xs">
-                    <span class="px-2 py-1 bg-slate-800 rounded">Time Management [cite: 9]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Leadership [cite: 9]</span>
-                    <span class="px-2 py-1 bg-slate-800 rounded">Event Management [cite: 9]</span>
-                </div>
-            </div>
+    <section class="glass-card">
+        <h2>Education</h2>
+        <div class="edu-item">
+            <div class="date">Aug 2023 – Present</div>
+            <h3>Bachelor of Technology (CSE)</h3>
+            <p class="score">CGPA: 6.08</p>
+        </div>
+        <div class="edu-item">
+            <div class="date">Apr 2022 - Mar 2023</div>
+            <h3>Intermediate</h3>
+            <p class="score">Percentage: 73.4%</p>
+        </div>
+        <div class="edu-item">
+            <div class="date">Apr 2020 - Mar 2021</div>
+            <h3>Matriculation</h3>
+            <p class="score">Percentage: 66%</p>
         </div>
     </section>
 
-    <section id="projects" class="py-24 px-6 max-w-6xl mx-auto">
-        <h2 class="text-3xl font-bold mb-12 flex items-center text-white"><span class="text-cyan-400 mr-4">03.</span> Projects</h2>
-        <div class="grid md:grid-cols-2 gap-8">
-            <div class="section-card p-8 rounded-3xl border-t-4 border-t-cyan-500">
-                <div class="flex justify-between mb-4 items-center">
-                    <span class="text-xs font-mono text-cyan-400 uppercase">March 2025 [cite: 12]</span>
-                    <i data-lucide="bot" class="w-6 h-6 text-slate-500"></i>
-                </div>
-                <h3 class="text-2xl font-bold text-white mb-4">Charity Recommender Chatbot [cite: 11]</h3>
-                <ul class="text-slate-400 space-y-3 text-sm">
-                    <li>• Developed an intelligent chatbot system to help users find suitable charity organizations[cite: 13].</li>
-                    <li>• Promoted safe donations through verified NGO recommendations[cite: 14].</li>
-                    <li>• Simplified charity search and improved donor engagement[cite: 14].</li>
-                </ul>
-            </div>
-            <div class="section-card p-8 rounded-3xl border-t-4 border-t-blue-500">
-                <div class="flex justify-between mb-4 items-center">
-                    <span class="text-xs font-mono text-blue-400 uppercase">April 2025 [cite: 16]</span>
-                    <i data-lucide="library" class="w-6 h-6 text-slate-500"></i>
-                </div>
-                <h3 class="text-2xl font-bold text-white mb-4">Library Tracker System [cite: 15]</h3>
-                <ul class="text-slate-400 space-y-3 text-sm">
-                    <li>• Built a digital system to manage books, records, and student details[cite: 17].</li>
-                    <li>• Automated manual tracking tasks to improve library efficiency[cite: 17].</li>
-                </ul>
-            </div>
+    <section class="glass-card">
+        <h2>Key Projects</h2>
+        <div class="project-item">
+            <div class="date">March 2025</div>
+            <h3>Charity Recommender Chatbot</h3>
+            <p>Developed an intelligent chatbot system to help users find suitable charity organizations and promoted safe donations through verified NGO recommendations.</p>
+        </div>
+        <div class="project-item">
+            <div class="date">April 2025</div>
+            <h3>Library Tracker System</h3>
+            <p>Built a digital system to manage books and student records, automating manual tracking tasks.</p>
         </div>
     </section>
+</div>
 
-    <footer class="py-20 text-center border-t border-slate-900">
-        <p class="text-slate-500 text-sm mb-4">Crafted with Precision by Harshit Sharma [cite: 1]</p>
-        <div class="flex justify-center space-x-6">
-            <a href="mailto:harshitsharma13890@gmail.com" class="text-cyan-400 hover:text-white transition underline underline-offset-4 text-xs font-mono">
-                harshitsharma13890@gmail.com [cite: 2]
-            </a>
-        </div>
-    </footer>
-
-    <script>
-        lucide.createIcons();
-
-        // High-Quality Canvas Starfield Animation
-        const canvas = document.getElementById('bgCanvas');
-        const ctx = canvas.getContext('2d');
-        let width, height, stars = [];
-
-        function init() {
-            width = window.innerWidth;
-            height = window.innerHeight;
-            canvas.width = width;
-            canvas.height = height;
-            stars = [];
-            for (let i = 0; i < 200; i++) {
-                stars.push({
-                    x: Math.random() * width,
-                    y: Math.random() * height,
-                    size: Math.random() * 1.5,
-                    speed: Math.random() * 0.5 + 0.1
-                });
-            }
-        }
-
-        function animate() {
-            ctx.clearRect(0, 0, width, height);
-            ctx.fillStyle = 'rgba(34, 211, 238, 0.5)';
-            stars.forEach(s => {
-                ctx.beginPath();
-                ctx.arc(s.x, s.y, s.size, 0, Math.PI * 2);
-                ctx.fill();
-                s.y -= s.speed;
-                if (s.y < 0) s.y = height;
-            });
-            requestAnimationFrame(animate);
-        }
-
-        window.addEventListener('resize', init);
-        init();
-        animate();
-    </script>
 </body>
 </html>
